double scrollbar bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   /* background-color: rgb(20, 20, 20); */
   color: rgb(234, 234, 234) !important;
+  overflow: hidden;
 }
 .bg-dark {
   background-color: black !important ;
